--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "eth-marketplace",
+  "name": "starter-kit",
   "version": "0.1.0",
-  "description": "An Ethereum Marketplace",
-  "author": "gregory@dappuniversity.com",
+  "description": "Boilerplate code",
+  "author": "saadhaxxan@ieee.org",
   "dependencies": {
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
